tests/NormalTests/paczka1/fuzzy1/39555355.err
Error in line 7: 3RRzB7svqO S503 24,4
Error in line 29: fXO3RMBAPk A72 85,7
Error in line 39: 3RRzB7svqO S63 90,40
Error in line 8: JfqlW A560 388,5
